--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dev": "ts-node src/index.ts",
     "build": "tsc -p tsconfig.build.json",
     "start": "node ./bin/index.js",
-    "test": "jest --detectOpenHandles",
-    "prepare": "husky install"
+    "test": "jest --detectOpenHandles"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
